--- a/ProposalChadLogan.ipynb
+++ b/ProposalChadLogan.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-16T19:01:45.609927Z",
@@ -105,7 +105,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Word count for file Project Proposal and Report Example.ipynb is 314\n"
+      "Word count for file ProposalChadLogan.ipynb is 771\n"
      ]
     }
    ],
@@ -113,7 +113,7 @@
     "import io\n",
     "import nbformat\n",
     "import glob\n",
-    "nbfile = glob.glob('Project Proposal and Report Example.ipynb')\n",
+    "nbfile = glob.glob('ProposalChadLogan.ipynb')\n",
     "if len(nbfile) > 1:\n",
     "    print('More than one ipynb file. Using the first one.  nbfile=', nbfile)\n",
     "with io.open(nbfile[0], 'r', encoding='utf-8') as f:\n",
@@ -142,7 +142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.12"
   },
   "toc": {
    "base_numbering": 1,
