--- a/notebooks/TermProjectChadLogan.ipynb
+++ b/notebooks/TermProjectChadLogan.ipynb
@@ -4,25 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Change this to the title of your project"
+    "# Training a convolutional neural network to play the 2048 game in Pytorch"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*by Chuck Anderson, October, 2023* \n",
-    "\n",
-    "Change the above line to be your name and date.  Include names of all team members, if this is a team project."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Please follow the structure of this example proposal.  For the proposal, change all text except the headings.\n",
-    "\n",
-    "At the end is a code cell that counts words for you.\n"
+    "*by Chad Schwenke and Logan Cadman, December, 2023* "
    ]
   },
   {
@@ -106,19 +95,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "There is no word count expectations for your proposal.\n",
-    "\n",
-    "Your final report should contain 2,000 to 3,000 words, times the number of team members.  Projects with two people, for example, should contain 4,000 to 6,000 words.\n",
-    "\n",
-    "Count words by running the following python code in your report directory.  Do this before you check-in this notebook so the word count appears as the output of the following code cell."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -132,7 +108,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Word count for file Project Proposal and Report Example.ipynb is 314\n"
+      "Word count for file TermProjectChadLogan.ipynb is 298\n"
      ]
     }
    ],
@@ -140,7 +116,7 @@
     "import io\n",
     "import nbformat\n",
     "import glob\n",
-    "nbfile = glob.glob('Project Proposal and Report Example.ipynb')\n",
+    "nbfile = glob.glob('TermProjectChadLogan.ipynb')\n",
     "if len(nbfile) > 1:\n",
     "    print('More than one ipynb file. Using the first one.  nbfile=', nbfile)\n",
     "with io.open(nbfile[0], 'r', encoding='utf-8') as f:\n",
@@ -151,13 +127,6 @@
     "        word_count += len(cell['source'].replace('#', '').lstrip().split(' '))\n",
     "print('Word count for file', nbfile[0], 'is', word_count)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -176,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.12"
   },
   "toc": {
    "base_numbering": 1,
